ContentProvided implemented, next step Loader - END DAY 6

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,9 @@
 
     <string name="FETCHBOOKS">FETCHBOOKS</string>
 
+    <string name="UNKNOWN">unknonw</string>
+    <string name="Save_book">save in my library</string>
+    <string name="my_library">My Library</string>
+
 
 </resources>
