Element for Reading Track Created. next Step: AddReadingTrackActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,13 @@
     <string name="my_library">My Library</string>
     <string name="book_saved">Book Saved</string>
 
+    <string name="save_readingTrack">Save Reading Track </string>
+    <string name="info_readingTrack">Insert Reading Track Info </string>
+    <string name="title_readingTrack">Select Book </string>
+    <string name="date_readingTrack">Select Date </string>
+    <string name="location_readingTrack">Find Location </string>
+    <string name="Page_readingTrack">Page Read During This Track</string>
+
+
 
 </resources>
