--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="date_readingTrack">Select Date </string>
     <string name="location_readingTrack">Find Location </string>
     <string name="Page_readingTrack">Page Read During This Track</string>
+    <string name="add_readingTrack">Add Reading Track</string>
+    <string name="reading_track_saved">Reading track Saved</string>
 
 
 
