Loading Data from Room is working (MyLibraryBookDetails)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,9 @@
     <string name="selectTitle_Spinner">Select Book Title</string>
     <string name="emptyLibrary_Spinner">No book to select</string>
 
+    <string name="my_library_details">My Library Details</string>
+
+
 
 
 
