--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,11 @@
     <string name="emptyLibrary_Spinner">No book to select</string>
 
     <string name="my_library_details">My Library Details</string>
+    <string name="my_reading_tracks">My ReadingTracks</string>
+    <string name="detailsTitle">Book Title:</string>
+    <string name="detailsLocation">Location: </string>
+    <string name="detailsDate">Date: </string>
+    <string name="detailsPages">Pages Read: </string>
 
 
 
