--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,11 @@
     <string name="YES">YES</string>
     <string name="NO">NO</string>
 
+    <string name="editReadingTrack">Edit Reading Track</string>
+    <string name="updateReadingTrack">UPDATE</string>
+    <string name="unsaved_changes">There are unsaved changes. Do you want to continue editing the Reading track?</string>
+    <string name="keep">Keep</string>
+    <string name="discard">Discard</string>
 
 
 
