Update Quote Body Text Watcher

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
 
     <string name="editReadingTrack">Edit Reading Track</string>
     <string name="updateReadingTrack">UPDATE</string>
-    <string name="unsaved_changes">There are unsaved changes. Do you want to continue editing the Reading track?</string>
+    <string name="unsaved_changes">There are unsaved changes. Do you want to continue editing ?</string>
     <string name="keep">Keep</string>
     <string name="discard">Discard</string>
     <string name="itemUpdated">"Reading Track Updated</string>
