--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,21 +62,23 @@
     <string name="unsaved_changes">There are unsaved changes. Do you want to continue editing ?</string>
     <string name="keep">Keep</string>
     <string name="discard">Discard</string>
-    <string name="itemUpdated">"Reading Track Updated</string>
+    <string name="itemUpdated">Reading Track Updated</string>
 
-    <string name="selectBook">"Select Book</string>
-    <string name="insertQuote">"Insert Quote</string>
-    <string name="insertQuotehint">"insert your quote here</string>
-    <string name="saveQuote">"Save Quote</string>
-    <string name="updateQuote">"Update Quote</string>
-    <string name="Add_Quote">"Add Quote</string>
-    <string name="quoteBook">"Book Title</string>
-    <string name="quoteDescription">"Quote Content</string>
-    <string name="myQuotes">"My Quotes</string>
-    <string name="quoteContent_empty">"Please insert a quote content.</string>
+    <string name="selectBook">Select Book</string>
+    <string name="insertQuote">Insert Quote</string>
+    <string name="insertQuotehint">insert your quote here</string>
+    <string name="saveQuote">Save Quote</string>
+    <string name="updateQuote">Update Quote</string>
+    <string name="Add_Quote">Add Quote</string>
+    <string name="quoteBook">Book Title</string>
+    <string name="quoteDescription">Quote Content</string>
+    <string name="myQuotes">My Quotes</string>
+    <string name="quoteContent_empty">Please insert a quote content</string>
 
-
-
-
+    <string name="deleteButton">DELETE BOOK</string>
+    <string name="warning_delete_book">Deleting this Book from your library will also delete its Reading Tracks
+    and Quotes. Are you sure you want to Continue?</string>
+    <string name="yesDelete">YES, DELETE IT</string>
+    <string name="dontDelete">NO, KEEP IT</string>
 
 </resources>
