--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="quoteBook">Book Title</string>
     <string name="quoteDescription">Quote Content</string>
     <string name="myQuotes">My Quotes</string>
+    <string name="quoteSaved">Quote Saved</string>
     <string name="quoteContent_empty">Please insert a quote content</string>
 
     <string name="deleteButton">DELETE BOOK</string>
@@ -84,8 +85,8 @@
     <string name="bookDeleted">Book Deleted</string>
 
 
-    <string name="widget_title">Quote</string>
-    <string name="widget_message">Insert your book quote here</string>
-    <string name="widget_save_button">Save a Book Quote</string>
+    <string name="widget_title">Your last favourite Quote</string>
+    <string name="noQuoteWidget">No quote to show</string>
+
 
 </resources>
